[package]
name = "reddit-cli-rs"
version = "0.1.0"
edition = "2024"
description = "A clean Rust Reddit CLI for subreddit research and guarded account actions."
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
zeroize = "1"
